[package]
name = "shader_macro_test"
version = "0.1.0"
authors = ["DanielKrottendorfer <krotttendorfer@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shader_macro = {git = "https://github.com/DanielKrottendorfer/gl_shader_macro.git", features = ["print_output"]}
cgmath = "0.17.0"
gl = "0.14.0"
